Saving my work.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,26 @@ readme = "README.md"
 python = "^3.12"
 
 [tool.poetry.group.dev.dependencies]
-ruff = "^0.6.2"
 mypy = "^1.11.1"
 pre-commit = "^3.8.0"
+ruff = "^0.6.2"
+
+[tool.mypy]
+disallow_untyped_defs = true
+strict_equality = true
+warn_redundant_casts = true
+warn_return_any = true
+warn_unused_ignores = true
+check_untyped_defs = true
+enable_incomplete_feature = "NewGenericSyntax"
+files = ["dictscreen"]
+
+[tool.ruff]
+target-version = "py312"
+
+[tool.ruff.lint]
+select = ["A", "B", "C4", "E", "F", "I", "N", "RUF", "SLF", "UP", "W"]
+ignore = ["E501"]
 
 [build-system]
 requires = ["poetry-core"]
